--- a/influencer/templates/influencer/brands.html
+++ b/influencer/templates/influencer/brands.html
@@ -2,4 +2,9 @@
 {% block main %}
 <h1>Brands</h1>
 <a href="{% url 'accounts:settings' %}">Settings</a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<script>
+    $('#brands-top-nav-id').addClass('is-active');
+</script>
 {% endblock %}
