--- a/accounts/templates/accounts/activation/base.html
+++ b/accounts/templates/accounts/activation/base.html
@@ -89,12 +89,14 @@
                 <div class="mdl-layout-spacer"></div>
                 <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        How It Works
+                        <i class="material-icons">engineering</i>
+                        &nbsp;&nbsp;How It Works
                     </button>
                 </a>
                 <a href="#" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        Pricing
+                        <i class="material-icons">monetization_on</i>
+                        &nbsp;&nbsp;Pricing
                     </button>
                 </a>
                 <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
