--- a/brand/templates/brand/base.html
+++ b/brand/templates/brand/base.html
@@ -121,6 +121,41 @@
             margin-left: 2vw;
             margin-right: 1vw;
         }
+
+        .logo-menu-container {
+            background-color: #161A1D;
+            margin: 4vh 1vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .logo-menu-img {
+            height: 6vh;
+        }
+
+        .logo-menu-text {
+            font-size: 1.5em;
+            padding-left: 10px;
+            font-family: 'Roboto Slab', serif;
+            color: #E0E0E0;
+        }
+
+        .mdl-navigation .mdl-navigation__link {
+            color: #161A1D !important;
+        }
+
+        .mdl-layout__header-row div.material-icons {
+            cursor: pointer;
+        }
+
+        .settings-btn {
+            height: 24px;
+            text-decoration: none;
+            color: #EEEEEE;
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
@@ -130,27 +165,10 @@
                     <div class="logo-text">ENDORSITY</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
-                <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
-                    <button class="mdl-button mdl-js-button">
-                        How It Works
-                    </button>
-                </a>
-                <a href="#" class="mdl-navigation__link">
-                    <button class="mdl-button mdl-js-button">
-                        Pricing
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">question_answer</i>
-                        &nbsp;&nbsp;Contact Us
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">help</i>
-                        &nbsp;&nbsp;FAQ
-                    </button>
+                <a class="settings-btn" href="{% url 'accounts:settings' %}">
+                    <div class="material-icons">
+                        settings
+                    </div>
                 </a>
                 <div id="notifications"
                     class="material-icons {% if notifs_unread > 0 %}mdl-badge{% endif %} mdl-badge--overlap"
@@ -165,6 +183,30 @@
                 </a>
             </div>
         </header>
+        <div class="mdl-layout__drawer">
+            <div class="logo-menu-container">
+                <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-menu-img" />
+                <div class="logo-menu-text">ENDORSITY</div>
+            </div>
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="{% url 'accounts:how_it_works' %}">
+                    <i class="material-icons">engineering</i>
+                    &nbsp;&nbsp;How It Works
+                </a>
+                <a class="mdl-navigation__link" href="#">
+                    <i class="material-icons">monetization_on</i>
+                    &nbsp;&nbsp;Pricing
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
+                    <i class="material-icons">question_answer</i>
+                    &nbsp;&nbsp;Contact Us
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
+                    <i class="material-icons">help</i>
+                    &nbsp;&nbsp;FAQs
+                </a>
+            </nav>
+        </div>
         <ul id="notif-log" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="notifications">
             {% for notification in notifications %}
             <a href="{{ notification.link }}">
@@ -190,7 +232,7 @@
             </div>
             <div class="mdl-cell mdl-cell--3-col">
                 <a href="#">
-                    <i class="material-icons">list</i>
+                    <i class="material-icons">people</i>
                     &nbsp;INFLUENCERS
                 </a>
             </div>
