--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load influencer_tags %}
 <!DOCTYPE html>
 <html>
 
@@ -38,7 +39,7 @@
         .mdl-layout__header {
             background-color: transparent;
             box-shadow: none;
-            margin-top: 3vh;
+            margin-top: 1.5vh;
         }
 
         .logo-container {
@@ -61,7 +62,7 @@
         }
 
         .mdl-layout__drawer-button {
-            margin-top: 4.5vh;
+            margin-top: 3vh;
         }
 
         .mdl-layout__drawer-button>i {
@@ -82,12 +83,13 @@
         .top-menu {
             width: 40vw;
             text-align: center;
-            margin-top: 3vh;
+            margin-top: 0.2vh;
             border: 2px solid #EEEEEE;
             border-radius: 5px;
             padding: 0;
             background-color: #EEEEEE;
             color: #161A1D;
+            margin-bottom: 1.8vh;
         }
 
         .top-menu i {
@@ -121,6 +123,49 @@
             margin-left: 2vw;
             margin-right: 1vw;
         }
+
+        .logo-menu-container {
+            background-color: #161A1D;
+            margin: 4vh 1vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .logo-menu-img {
+            height: 6vh;
+        }
+
+        .logo-menu-text {
+            font-size: 1.5em;
+            padding-left: 10px;
+            font-family: 'Roboto Slab', serif;
+            color: #E0E0E0;
+        }
+
+        .mdl-navigation .mdl-navigation__link {
+            color: #161A1D !important;
+        }
+
+        .mdl-layout__header-row div.material-icons {
+            cursor: pointer;
+        }
+
+        .settings-btn {
+            height: 24px;
+            text-decoration: none;
+            color: #EEEEEE;
+        }
+
+        .unlock-anchor {
+            margin-right: 2vw;
+        }
+
+        .mdl-layout__content {
+            border-top: 1px solid #EEEEEE
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
@@ -130,27 +175,18 @@
                     <div class="logo-text">ENDORSITY</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
-                <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
-                    <button class="mdl-button mdl-js-button">
-                        How It Works
+                {% if not request.user|is_influencer_unlocked %}
+                <a href="#" class="mdl-navigation__link unlock-anchor">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                        <i class="material-icons">lock_open</i>
+                        &nbsp;&nbsp;Unlock
                     </button>
                 </a>
-                <a href="#" class="mdl-navigation__link">
-                    <button class="mdl-button mdl-js-button">
-                        Pricing
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">question_answer</i>
-                        &nbsp;&nbsp;Contact Us
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">help</i>
-                        &nbsp;&nbsp;FAQ
-                    </button>
+                {% endif %}
+                <a class="settings-btn" href="{% url 'accounts:settings' %}">
+                    <div class="material-icons">
+                        settings
+                    </div>
                 </a>
                 <div id="notifications"
                     class="material-icons {% if notifs_unread > 0 %}mdl-badge{% endif %} mdl-badge--overlap"
@@ -165,6 +201,30 @@
                 </a>
             </div>
         </header>
+        <div class="mdl-layout__drawer">
+            <div class="logo-menu-container">
+                <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-menu-img" />
+                <div class="logo-menu-text">ENDORSITY</div>
+            </div>
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="{% url 'accounts:how_it_works' %}">
+                    <i class="material-icons">engineering</i>
+                    &nbsp;&nbsp;How It Works
+                </a>
+                <a class="mdl-navigation__link" href="#">
+                    <i class="material-icons">monetization_on</i>
+                    &nbsp;&nbsp;Pricing
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
+                    <i class="material-icons">question_answer</i>
+                    &nbsp;&nbsp;Contact Us
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
+                    <i class="material-icons">help</i>
+                    &nbsp;&nbsp;FAQs
+                </a>
+            </nav>
+        </div>
         <ul id="notif-log" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="notifications">
             {% for notification in notifications %}
             <a href="{{ notification.link }}">
@@ -176,20 +236,20 @@
             </a>
         </ul>
         <div class="top-menu mdl-grid">
-            <div class="mdl-cell mdl-cell--4-col is-active">
+            <div id="brands-top-nav-id" class="mdl-cell mdl-cell--4-col">
                 <a href="{% url 'influencer:brands' %}">
                     <i class="material-icons">local_offer</i>
                     &nbsp;BRANDS
                 </a>
             </div>
-            <div class="mdl-cell mdl-cell--4-col">
+            <div id="post-top-nav-id" class="mdl-cell mdl-cell--4-col">
                 <a href="#">
                     <i class="material-icons">favorite</i>
                     &nbsp;POST
                 </a>
             </div>
-            <div class="mdl-cell mdl-cell--4-col">
-                <a href="#">
+            <div id="profile-top-nav-id" class="mdl-cell mdl-cell--4-col">
+                <a href="{% url 'influencer:profile' %}">
                     <i class="material-icons">account_circle</i>
                     &nbsp;PROFILE
                 </a>
@@ -198,8 +258,6 @@
         <main class="mdl-layout__content">
             <div class="page-content">
                 {% block main %}{% endblock %}
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
         </main>
     </div>
