Add brand unlock provisions.

--- a/accounts/templates/accounts/brand_registration.html
+++ b/accounts/templates/accounts/brand_registration.html
@@ -79,6 +79,7 @@
         font-size: 1.2em;
         vertical-align: middle;
         padding-bottom: 3px;
+        cursor: help;
     }
 </style>
 {% endblock %}
