--- a/accounts/templates/accounts/complete_registration/complete_brand_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_brand_reg.html
@@ -66,6 +66,7 @@
         font-size: 1.2em;
         vertical-align: middle;
         padding-bottom: 3px;
+        cursor: help;
     }
 </style>
 {% endblock %}
