--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -33,6 +33,10 @@
             background-color: #EEEEEE !important;
         }
 
+        button.action-required {
+            background-color: #ffeb3b !important;
+        }
+
         body {
             background-color: #161A1D;
         }
@@ -183,6 +187,13 @@
                         &nbsp;&nbsp;Unlock
                     </button>
                 </a>
+                {% else %}
+                <a href="{% url 'influencer:post' %}" class="mdl-navigation__link unlock-anchor">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored action-required">
+                        <i class="material-icons">warning</i>
+                        &nbsp;&nbsp;Action Required
+                    </button>
+                </a>
                 {% endif %}
                 <a class="settings-btn" href="{% url 'accounts:settings' %}">
                     <div class="material-icons">
@@ -246,7 +257,7 @@
                 </a>
             </div>
             <div id="post-top-nav-id" class="mdl-cell mdl-cell--4-col">
-                <a href="#">
+                <a href="{% url 'influencer:post' %}">
                     <i class="material-icons">favorite</i>
                     &nbsp;POST
                 </a>
