Complete Influencer Post View.

--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -34,7 +34,7 @@
         }
 
         button.action-required {
-            background-color: #ffeb3b !important;
+            background-color: #fbc02d !important;
         }
 
         body {
@@ -263,7 +263,7 @@
                 </a>
             </div>
             <div id="profile-top-nav-id" class="mdl-cell mdl-cell--4-col">
-                <a href="{% url 'influencer:profile' %}">
+                <a href="{% url 'influencer:profile_analytics' %}">
                     <i class="material-icons">account_circle</i>
                     &nbsp;PROFILE
                 </a>
